--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "pnpm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "pnpm": {
